1.0.0 (currently working on)
- [#3820] Feature: Make it configurable which place fields in the FE editor are required
- [#3817] Fix: Calling the deprecated t3lib_div::GPvar floods the deprecation log
- [#3811] Feature: Filter the topic list automatically by the event types that are selected in the flexforms
- [#3806] Feature: Include the places ZIP in the thank-you e-mail to the participants
- [#3807] Feature: Include the places ZIP in the CSV export of events
- [#3805] Feature: Display the places ZIP in the single view
- [#3804] Feature: Add the places ZIP to the FE editor
- [#3803] Feature: Add a field "ZIP" to the places
- [#3220] Feature: On the second registration page, list the user's name at the beginning of the names list if "myself" has been checked
- [#3543] Fix: Multiple registrations when double-clicking submit-button
- [#3149] Fix: Search in list module ignores the the registration titles
- [#3792] Fix: Total price not shown on registration summary page
- [#3793] Change: The "my managed events" list should take timeframeInList into account
- [#3784] Fix: $this->iEdition not defined in addAdministrativeData
- [#3802] Fix: Test failures in latest TYPO3 due to changed icon paths
- [#3766] Fix: In the events CSV file, place not formatted correctly
- [#3778] Feature: Add some hooks for the registration and unregistration process
- [#3780] Feature: Add a relation event->registrations
- [#3777] Feature: Add Model_Event::getAvailablePrices
- [#955] Change: Drop mod1
- [#3065] Change: Use the new getters/setters when using the configuration proxy
- [#2586] Change: Remove the conflict with date2cal once the date2cal bugs have been fixed
- [#3735] Fix: Error 102 when saving a registration record in backend
- [#3779] Fix: Typo in the Event Model: "Boad"
- [#3595] Fix: Internet Explorer shows border around radio button on registration page, patch by Thomas Biesenbach
- [#3738] Change: Require static_info_tables >= 2.1.0