@@ -157,7 +157,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 	// Tests for limiting the bag to events in certain categories.
 	////////////////////////////////////////////////////////////////
 
-	public function testSkippingLimitToCategoriesResultsInAllEvents() {
+	/**
+	 * @test
+	 */
+	public function skippingLimitToCategoriesResultsInAllEvents() {
 		$this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -183,7 +186,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToEmptyCategoryUidResultsInAllEvents() {
+	/**
+	 * @test
+	 */
+	public function limitToEmptyCategoryUidResultsInAllEvents() {
 		$this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -211,7 +217,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToEmptyCategoryAfterLimitToNotEmptyCategoriesUidResultsInAllEvents() {
+	/**
+	 * @test
+	 */
+	public function limitToEmptyCategoryAfterLimitToNonEmptyCategoriesUidResultsInAllEvents() {
 		$this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -240,7 +249,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesCanResultInOneEvent() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesCanResultInOneEvent() {
 		$eventUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -263,7 +275,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesCanResultInTwoEvents() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesCanResultInTwoEvents() {
 		$categoryUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_CATEGORIES
 		);
@@ -295,7 +310,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesWillExcludeUnassignedEvents() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesExcludesUnassignedEvents() {
 		$this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -327,7 +345,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesWillExcludeEventsOfOtherCategories() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesExcludesEventsOfOtherCategories() {
 		$eventUid1 = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -365,7 +386,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesResultsInAnEmptyBagIfThereAreNoMatches() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesForNoMatchesResultsInEmptyBag() {
 		$this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -396,7 +420,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesIgnoresTopicRecords() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesCanFindTopicRecords() {
 		$eventUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_TOPIC)
@@ -411,14 +438,18 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$this->fixture->limitToCategories($categoryUid);
 		$bag = $this->fixture->build();
 
-		$this->assertTrue(
-			$bag->isEmpty()
+		$this->assertEquals(
+			1,
+			$bag->count()
 		);
 
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesFindsDateRecordForTopic() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesForMatchingTopicFindsDateRecordAndTopic() {
 		$topicUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_TOPIC)
@@ -441,18 +472,25 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag = $this->fixture->build();
 
 		$this->assertEquals(
-			1,
+			2,
 			$bag->count()
 		);
-		$this->assertEquals(
-			$dateUid,
-			$bag->current()->getUid()
+
+		$matchingUids = explode(',', $bag->getUids());
+		$this->assertTrue(
+			in_array($topicUid, $matchingUids)
+		);
+		$this->assertTrue(
+			in_array($dateUid, $matchingUids)
 		);
 
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesFindsDateRecordForSingle() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesFindsDateRecordForSingle() {
 		$topicUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_COMPLETE)
@@ -482,7 +520,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesIgnoresTopicOfDateRecord() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesIgnoresTopicOfDateRecord() {
 		$topicUid = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_SEMINARS,
 			array('object_type' => SEMINARS_RECORD_TYPE_TOPIC)
@@ -518,7 +559,10 @@ class tx_seminars_seminarbagbuilder_testcase extends tx_phpunit_testcase {
 		$bag->__destruct();
 	}
 
-	public function testLimitToCategoriesCanFindEventsFromMultipleCategories() {
+	/**
+	 * @test
+	 */
+	public function limitToCategoriesCanFindEventsFromMultipleCategories() {
 		$categoryUid1 = $this->testingFramework->createRecord(
 			SEMINARS_TABLE_CATEGORIES
 		);
