@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3831] Fix: Topic list is empty if a category is selected in the flexforms
 - [#3820] Feature: Make it configurable which place fields in the FE editor are required
 - [#3817] Fix: Calling the deprecated t3lib_div::GPvar floods the deprecation log
 - [#3811] Feature: Filter the topic list automatically by the event types that are selected in the flexforms
